[package]
name = "mempool-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = "1.29.1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.4.0"
